update: 新增JDK/Tomcat版本兼容详情 + 坑点记录8条